refactor(legacy-http): Neutralize browse shell seam (#1256)
Extract neutral legacy HTTP path and category holders, replace the FProxy-specific shell bootstrap/context seam with browse-neutral types, and keep the shared force-link random initialization at the shell boundary.

Update bridge wiring, boundary checks, docs, and focused tests so the legacy HTTP shell no longer exposes FProxyToadlet directly through its shared bootstrap surface while preserving current route-registration behavior.